--- a/assets/badge.svg.erb
+++ b/assets/badge.svg.erb
@@ -1,16 +1,31 @@
 <svg xmlns="http://www.w3.org/2000/svg" width="77" height="18">
-  <linearGradient id="a" x2="0" y2="100%">
-    <stop offset="0" stop-color="#fff" stop-opacity=".7"/><stop offset=".1" stop-color="#aaa" stop-opacity=".1"/><stop offset=".9" stop-opacity=".3"/><stop offset="1" stop-opacity=".5"/>
+  <linearGradient id="bg" x2="0" y2="100%">
+    <stop offset="0" stop-color="#fff" stop-opacity=".7"/>
+    <stop offset=".1" stop-color="#aaa" stop-opacity=".1"/>
+    <stop offset=".9" stop-opacity=".3"/>
+    <stop offset="1" stop-opacity=".5"/>
   </linearGradient>
   <rect rx="4" width="77" height="18" fill="#555"/>
 
   <% x = 0 %>
   <% @grades.each do |grade| %>
-    <rect x="<%= 34+x %>" y="4" width="<%= grade.width %>" height="10" fill="<%= grade.color %>"/>
+    <linearGradient id="g<%= grade.name %>" x2="0" y2="100%">
+      <stop offset="0" stop-color="#999" stop-opacity=".3"/>
+      <stop offset=".1" stop-color="<%= grade.color %>" stop-opacity=".9"/>
+      <stop offset=".5" stop-color="<%= grade.color %>" stop-opacity="1"/>
+      <stop offset=".9" stop-color="<%= grade.color %>" stop-opacity=".9"/>
+      <stop offset="1" stop-color="#888" stop-opacity=".3"/>
+    </linearGradient>
+    <rect x="<%= 34+x %>" y="4" width="<%= grade.width %>" height="10" fill="url(#g<%= grade.name %>)"/>
     <% x += grade.width %>
   <% end %>
 
-  <rect rx="4" width="77" height="18" fill="url(#a)"/>
+  <rect x="34" y="4" width="1" height="1" fill="#666"/>
+  <rect x="34" y="13" width="1" height="1" fill="#666"/>
+  <rect x="73" y="4" width="1" height="1" fill="#666"/>
+  <rect x="73" y="13" width="1" height="1" fill="#666"/>
+
+  <rect rx="4" width="77" height="18" fill="url(#bg)"/>
   <g fill="#fff" text-anchor="middle" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11">
     <text x="18.5" y="13" fill="#010101" fill-opacity=".3">docs</text>
     <text x="18.5" y="12">docs</text>
