Update flat style to have round edges

--- a/assets/badge-flat.svg.erb
+++ b/assets/badge-flat.svg.erb
@@ -1,5 +1,5 @@
 <svg xmlns="http://www.w3.org/2000/svg" width="80" height="20">
-  <rect width="80" height="20" fill="#656565"/>
+  <rect rx="3" width="80" height="20" fill="#656565"/>
 
     <linearGradient id="gradA" x2="0" y2="100%">
       <stop offset="0" stop-color="#46b01e" />
