--- a/assets/badge-default.svg.erb
+++ b/assets/badge-default.svg.erb
@@ -35,6 +35,13 @@
       <stop offset=".9" stop-color="#6a598d" />
       <stop offset="1" stop-color="#5f4f7d" />
     </linearGradient>
+    <linearGradient id="gradN" x2="0" y2="100%">
+      <stop offset="0" stop-color="#9B9B9B" />
+      <stop offset=".1" stop-color="#9B9B9B" />
+      <stop offset=".5" stop-color="#9B9B9B" />
+      <stop offset=".9" stop-color="#9B9B9B" />
+      <stop offset="1" stop-color="#9B9B9B" />
+    </linearGradient>
 
   <%
     bar_x = 34 + 3
