--- a/assets/badge-flat.svg.erb
+++ b/assets/badge-flat.svg.erb
@@ -31,6 +31,13 @@
     <stop offset=".9" stop-color="#7a67a0" />
     <stop offset="1" stop-color="#7a67a0" />
   </linearGradient>
+    <linearGradient id="gradN" x2="0" y2="100%">
+      <stop offset="0" stop-color="#9B9B9B" />
+      <stop offset=".1" stop-color="#9B9B9B" />
+      <stop offset=".5" stop-color="#9B9B9B" />
+      <stop offset=".9" stop-color="#9B9B9B" />
+      <stop offset="1" stop-color="#9B9B9B" />
+    </linearGradient>
 
   <%
     bar_x = 33 + 3
